--- a/00-HTML-CSS-basics/2.1-2.5/index.html
+++ b/00-HTML-CSS-basics/2.1-2.5/index.html
@@ -18,14 +18,14 @@
     </head>
     <body>
         <header class="header">Header</header>
-        <nav class="navigation">nav</nav>
-        <section class="content">
+        <nav class="navigation">nav</nav><!--
+     --><section class="content">
             <header class="header">header de section</header>
             <article>article de section</article>
             <footer class="footer">footer de section </footer>
-        </section>
+        </section><!--
 
-        <aside class="sidebar">aside</aside>
+        --><aside class="sidebar">aside</aside>
         <div style="clear: both;"></div>
         <footer class="footer">footer</footer>
 
