--- a/00-HTML-CSS-basics/2.1-2.5/index layout system.html
+++ b/00-HTML-CSS-basics/2.1-2.5/index layout system.html
@@ -19,24 +19,27 @@
 <body>
     <div id="container">
         <div class="section group">
-            <div class="col span_1_of_6">
-                1 of 6
+            <div class="col span_2_of_6">
+                <p>Showcase</p>
             </div>
-            <div class="col span_1_of_6">
-                1 of 6
+            <div class="col span_4_of_6">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed suscipit libero. Praesent aliquet tincidunt odio eu consequat. Mauris iaculis tellus ligula, in aliquam purus tristique dapibus. Fusce vel turpis ut libero semper rhoncus sed eget leo. Vivamus vestibulum malesuada tincidunt.</p>
+                <br>
+                <p>Aliquam non <b>quam</b> dapibus, <b>malesuada</b> nunc eu, ultricies diam.</p>
             </div>
-            <div class="col span_1_of_6">
-                1 of 6
+        </div>
+        <div class="section group">
+            <div class="col span_2_of_6">
+                <img src="img/imagen1.jpg">
+                <img src="img/imagen4.jpg">
             </div>
-            <div class="col span_1_of_6">
-                1 of 6
+            <div class="col span_2_of_6">
+                <img src="img/imagen2.jpg">
+                <img src="img/imagen5.jpg">
             </div>
-            <div class="col span_1_of_6">
-                1 of 6
-            </div>
-            <div class="col span_1_of_6">
-                1 of 6
-            </div>
+            <div class="col span_2_of_6"></div>
+                <img src="img/imagen3.jpg">
+                <img src="img/imagen6.jpg">
         </div>
     </div>
 
