Anda bien en media
Anda mal en browser

--- a/00-HTML-CSS-basics/2.1-2.5/index layout system.html
+++ b/00-HTML-CSS-basics/2.1-2.5/index layout system.html
@@ -28,48 +28,48 @@
                 <p>Aliquam non <b>quam</b> dapibus, <b>malesuada</b> nunc eu, ultricies diam.</p>
             </div>
         </div>
-        <div class="section group image">
-            <div class="col span_2_of_6">
+        <div class="section group image"><!--
+            --><div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
                       <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 7</a>
                   </div>
                   <img src="img/imagen7.jpg" alt="Test image 1" title="">
                 </div>
-            </div>
-            <div class="col span_2_of_6">
+            </div><!--
+            --><div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
                       <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 4</a>
                   </div>
                   <img src="img/imagen4.jpg" alt="Test image 2" title="">
                 </div>
-            </div>
-            <div class="col span_2_of_6">
+            </div><!--
+            --><div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
                       <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 1</a>
                   </div>
                   <img src="img/imagen1.jpg" alt="Test image 3" title="">
                 </div>
-            </div>
-            <div class="col span_2_of_6">
+            </div><!--
+            --><div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
                       <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 5</a>
                   </div>
                   <img src="img/imagen5.jpg" alt="Test image 4" title="">
                 </div>
-            </div>
-            <div class="col span_2_of_6">
+            </div><!--
+            --><div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
                       <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 2</a>
                   </div>
                   <img src="img/imagen2.jpg" alt="Test image 5" title="">
                 </div>
-            </div>
-            <div class="col span_2_of_6">
+            </div><!--
+            --><div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
                       <a class="title" href="http://www.w3schools.com/html/"/>Esto es la imagen 3</a>
