Anda como deberia para pagina nomas
No anda como deberia para media

--- a/00-HTML-CSS-basics/2.1-2.5/index layout system.html
+++ b/00-HTML-CSS-basics/2.1-2.5/index layout system.html
@@ -28,51 +28,45 @@
                 <p>Aliquam non <b>quam</b> dapibus, <b>malesuada</b> nunc eu, ultricies diam.</p>
             </div>
         </div>
-        <div class="section group image"><!--
-            --><div class="col span_2_of_6">
+        <div class="section group image">
+            <div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
-                      <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 7</a>
+                      <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 7</p>
                   </div>
-                  <img src="img/imagen7.jpg" alt="Test image 1" title="">
+                  <img src="img/imagen7.jpg" alt="Test image 1" title="First image">
                 </div>
-            </div><!--
-            --><div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
-                      <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 4</a>
+                      <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 4</p>
                   </div>
                   <img src="img/imagen4.jpg" alt="Test image 2" title="">
                 </div>
-            </div><!--
-            --><div class="col span_2_of_6">
+            </div>
+            <div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
-                      <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 1</a>
+                      <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 1</p>
                   </div>
                   <img src="img/imagen1.jpg" alt="Test image 3" title="">
                 </div>
-            </div><!--
-            --><div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
-                      <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 5</a>
+                      <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 5</p>
                   </div>
                   <img src="img/imagen5.jpg" alt="Test image 4" title="">
                 </div>
-            </div><!--
-            --><div class="col span_2_of_6">
+            </div>
+            <div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
-                      <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 2</a>
+                      <a class="title" href="http://www.w3schools.com/html/">Esto es la imagen 2</p>
                   </div>
                   <img src="img/imagen2.jpg" alt="Test image 5" title="">
                 </div>
-            </div><!--
-            --><div class="col span_2_of_6">
                 <div class="labeled-image">
                   <div class="mouseover">
-                      <a class="title" href="http://www.w3schools.com/html/"/>Esto es la imagen 3</a>
+                      <a class="title" href="http://www.w3schools.com/html/"/>Esto es la imagen 3</p>
                   </div>
                   <img src="img/imagen3.jpg" alt="Test image 6" title="">
                 </div>
