--- a/01-JS-DOM-APIs/1.10/index.html
+++ b/01-JS-DOM-APIs/1.10/index.html
@@ -19,14 +19,15 @@
     <title>Bootcamp activity 1.7 test</title>
   </head>
   <body onload="mostrarTexto()">
-    <header class="header">Header</header>
-    <nav class="navigation">nav</nav>
+    <header class="header">Bootcamp Globant 2016</header>
+    <nav class="navigation">Ejercicio 1.7</nav>
     <section class="oculto">
         <p>Hello world</p>
         <p id="chistesDel2008"></p>
+        <ul id="lista"></ul>
     </section>
     <button type="button" onclick="chistesDel2008()">Click Me!</button>
     <br>
-    <footer class="footer">footer</footer>
+    <footer class="footer">Martin Fares &copy;</footer>
   </body>
 </html>
