--- a/01-JS-DOM-APIs/1.7 - 1.9/index.html
+++ b/01-JS-DOM-APIs/1.7 - 1.9/index.html
@@ -16,16 +16,18 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/js.js"></script>
 
-    <title>Bootcamp activity 1 test</title>
+    <title>Bootcamp activity 1.7 test</title>
   </head>
   <body onload="mostrarTexto()">
-    <header class="header">Bootcamp globant</header>
+    <header class="header">Bootcamp Globant 2016</header>
+    <nav class="navigation">Ejercicio 1.7</nav>
     <section class="oculto">
         <p>Hello world</p>
         <p id="chistesDel2008"></p>
-
+        <ul id="lista"></ul>
     </section>
     <button type="button" onclick="chistesDel2008()">Click Me!</button>
-    <footer class="footer">2016</footer>
+    <br>
+    <footer class="footer">Martin Fares &copy;</footer>
   </body>
 </html>
