--- a/01-JS-DOM-APIs/1.10/index.html
+++ b/01-JS-DOM-APIs/1.10/index.html
@@ -26,6 +26,7 @@
         <p id="chistesDel2008"></p>
         <ul id="lista"></ul>
     </section>
+    <input type="text" id="query" required>
     <button type="button" onclick="chistesDel2008()">Click Me!</button>
     <br>
     <footer class="footer">Martin Fares &copy;</footer>
