--- a/00-HTML-CSS-basics/1.1 1.2 1.3/index.html
+++ b/00-HTML-CSS-basics/1.1 1.2 1.3/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8"/>
   </head>
   <body>
+    <div style="border: solid 1px red;">
+     <h1> Topic 00 Exercises 01</h1>
+        <a href="Login.html">Login</a>
+        <a href="Todo list.html">Todo List</a>
+        <a href="table.html">Table</a>              
+    </div>
     <img src="https://www.google.com.ar/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Pirulino se mando una borrachera (Pssst la imagen no cargo, recarga la pagina)"/>
     <video controls>
       <label>Video demo to test functionality</label>
