Added navigation and some css
Added navigation to the exercises and some css.
Now you can visit any exercise page and go back comfortably.

--- a/00-HTML-CSS-basics/1.1 1.2 1.3/Login.html
+++ b/00-HTML-CSS-basics/1.1 1.2 1.3/Login.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1"/>
       </head>
   <body>
+    <nav class="navigation">If you wanna go back and see the other exercises, 
+      <a href="../1.1 1.2 1.3/index.html">please click here!</a>
+    </nav>
     <form action="#" method="post">
       <label>First Name</label>
       <input type="text" name="name" required/>
