--- a/00-HTML-CSS-basics/2.1-2.5/index layout system.html
+++ b/00-HTML-CSS-basics/2.1-2.5/index layout system.html
@@ -17,6 +17,11 @@
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
+  <fieldset>
+    <nav>Why hello there
+      <a href="../../index.html">Click here! Lets go back to the exercise navegation panel!</a>
+    </nav>
+  </fieldset>
     <div id="container">
         <div class="section group text">
             <div class="col span_2_of_6">
