--- a/00-HTML-CSS-basics/2.1-2.5/index.html
+++ b/00-HTML-CSS-basics/2.1-2.5/index.html
@@ -18,7 +18,9 @@
     </head>
     <body>
         <header class="header">Header</header>
-        <nav class="navigation">nav</nav><!--
+        <nav>
+        <a href="../../index.html">Click here! Lets go back to the exercise navegation panel!</a>             
+        </nav><!--
      --><section class="content">
             <header class="header">header de section</header>
             <article>article de section</article>
