--- a/01-JS-DOM-APIs/1.1 - 1.4 - 1.6/index.html
+++ b/01-JS-DOM-APIs/1.1 - 1.4 - 1.6/index.html
@@ -20,12 +20,14 @@
   </head>
   <body onload="mostrarTexto()">
     <header class="header">Bootcamp globant</header>
+    <nav class="navigation">If you wanna go back to the navegation panel, 
+        <a href="../../index.html">please click here!</a>
+    </nav>
     <section class="oculto">
         <p>Hello world</p>
         <p id="chistesDel2008"></p>
-
     </section>
     <button type="button" onclick="chistesDel2008()">Click Me!</button>
-    <footer class="footer">2016</footer>
+    <footer class="footer">2016 Martin Fares &copy;</footer>
   </body>
 </html>
