--- a/02-oop-inheritance/2.1 - 2.5/index.html
+++ b/02-oop-inheritance/2.1 - 2.5/index.html
@@ -26,15 +26,16 @@
             // ...
             lordOfTheRings.play(); // output: The 'play' event has been emitted
         </script>
-        <header class="header">Header</header>
-        <nav class="navigation">nav</nav>
+        <header class="header">Hello and welcome to the exercises 2.1 to 2.5</header>
+        <nav class="navigation">If you wanna go back to the navegation panel, 
+            <a href="../../index.html">please click here!</a>
+        </nav>
         <section class="content">
-            <header class="header">header de section</header>
-            <article>article de section</article>
-            <footer class="footer">footer de section </footer>
+            <header class="header">THIS IS A CONSOLE ORIENTED EXERCISE</header>
+            <article>Please don't forget to open your console with f12 or right click > inspect > console to see the code!</article>
+            <footer class="footer">Thank you for passing by</footer>
         </section>
-        <aside class="sidebar">aside</aside>
-        <footer class="footer">footer</footer>
+        <footer class="footer">Martin Fares bid you farewell</footer>
 
     </body>
 </html>
