--- a/02-oop-inheritance/2.6/index.html
+++ b/02-oop-inheritance/2.6/index.html
@@ -45,8 +45,11 @@
         lordOfTheRings.addCast(otherCast); //Movie must contain an array of 4 actors
 
         </script>
-        <header class="header">Hello and welcome</header>
-        <nav class="navigation">If you wanna go back to the navegation panel, please click here!</nav>
+        <header class="header">Hello and welcome to the exercies 2.6 to 2.8, if you wanna check exercise 2.6 & 2.7 please go back to the navegation and follow the correct link</header>
+        <br>
+        <nav class="navigation">If you wanna go back to the navegation panel, 
+            <a href="../../index.html">please click here!</a>
+        </nav>
         <section class="content">
             <header class="header">THIS IS A CONSOLE ORIENTED EXERCISE</header>
             <article>Please don't forget to open your console with f12 or right click > inspect > console to see the code!</article>
