--- a/00-HTML-CSS-basics/1.1 1.2 1.3/Todo list.html
+++ b/00-HTML-CSS-basics/1.1 1.2 1.3/Todo list.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8"/>
   </head>
   <body>
+    <nav class="navigation">If you wanna go back and see the other exercises, 
+      <a href="../1.1 1.2 1.3/index.html">please click here!</a>
+    </nav>
   	<header>My todo list</header>
 
   <ul>
