--- a/01-JS-DOM-APIs/1.12/index.html
+++ b/01-JS-DOM-APIs/1.12/index.html
@@ -20,7 +20,9 @@
   </head>
   <body onload="mostrarTexto()">
     <header class="header">Bootcamp Globant 2016</header>
-    <nav class="navigation">Ejercicio 1.7</nav>
+    <nav class="navigation">If you wanna go back to the navegation panel, 
+        <a href="../../index.html">please click here!</a>
+    </nav>
     <section class="oculto">
         <p>Hello world</p>
         <p id="chistesDel2008"></p>
