--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@ and open the template in the editor.
             <a href="https://github.com/darkrevenger/startup/branches">If you are a developer and wanna check older versions like exercise 2-6 & 2-7 please click here and go to the release 2.6 on GITHUB!</a>              
         </nav>
         </fieldset> 
+        <fieldset>
+            <label>If you wanna go thru Topic 03 please click one of the links below.</label>
+           
+        <nav>
+            <a href="03-MVC-AngularJS/3.1/index.html">Here it is topic 03!</a>              
+        </nav>
+        </fieldset> 
         <footer class="footer">Martin Fares bid you farewell</footer>
     </body>
 </html>
