--- a/index.html
+++ b/index.html
@@ -59,6 +59,21 @@ and open the template in the editor.
             <a href="03-MVC-AngularJS/3.1/index.html">Here it is topic 03!</a>              
         </nav>
         </fieldset> 
+        <fieldset>
+            <label>If you wanna go thru Topic 04 please click one of the links below.</label>
+           
+        <nav>
+            <a href="04-HTML5-APIs\4\index.html">Here it is topic 04!</a>              
+        </nav>
+        </fieldset> 
+        <fieldset>
+            <label>If you wanna go thru Topic 03 please click one of the links below.</label>
+           
+        <nav>
+            <a href="\05-UI-ReactJS\index.html">Here it is topic 05!</a>              
+        </nav>
+        </fieldset> 
+
         <footer class="footer">Martin Fares bid you farewell</footer>
     </body>
 </html>
