index.html change
title

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@ and open the template in the editor.
             <label>If you wanna go thru Topic 04 please click one of the links below.</label>
            
         <nav>
-            <a href="04-HTML5-APIs\4\index.html">Here it is topic 04!</a>              
+            <a href="04-HTML5-APIs/4/index.html">Here it is topic 04!</a>              
         </nav>
         </fieldset> 
         <fieldset>
-            <label>If you wanna go thru Topic 03 please click one of the links below.</label>
+            <label>If you wanna go thru Topic 05 please click one of the links below.</label>
            
         <nav>
-            <a href="\05-UI-ReactJS\index.html">Here it is topic 05!</a>              
+            <a href="05-UI-ReactJS/5/index.html">Here it is topic 05!</a>              
         </nav>
         </fieldset> 
 
