--- a/05-UI-ReactJS/5/index.html
+++ b/05-UI-ReactJS/5/index.html
@@ -29,6 +29,7 @@
       <script src="js/react-dom.js"></script>
       <script src="js/babel-browser.min.js"></script>
       <script src="js/formsy-react.min.js"></script>
+      <script src="js/ReactRouter.min.js"></script>
       <script type="text/babel" src="js/controllers/main.js"></script>
 
     </body>
